<?xml version="1.0" encoding="utf-8"?>
<!--
    The MIT License (MIT)
    
    Copyright (c) 2010-2015 Carnegie Mellon University
    
    Permission is hereby granted, free of charge, to any person obtaining a copy
    of this software and associated documentation files (the "Software"), to deal
    in the Software without restriction, including without limitation the rights
    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
    copies of the Software, and to permit persons to whom the Software is
    furnished to do so, subject to the following conditions:
    
    The above copyright notice and this permission notice shall be included in
    all copies or substantial portions of the Software.
    
    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
    THE SOFTWARE.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/WalkthroughScrollView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/referenceLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayoutExchange"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textViewStepExchange"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_5dp"
                    android:text="@string/menu_TagExchange"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/textViewWalkExchange"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_5dp"
                    android:text="@string/help_home"
                    android:textSize="@dimen/text_size_medium" />

                <ImageView
                    android:id="@+id/imageViewExchange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/size_25dp"
                    android:layout_marginLeft="@dimen/size_20dp"
                    android:layout_marginRight="@dimen/size_25dp"
                    android:adjustViewBounds="true"
                    android:background="#000000"
                    android:contentDescription="@string/menu_TagExchange"
                    android:padding="@dimen/size_1dp"
                    android:src="@drawable/scn_home_android" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutCompose"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textViewStepCompose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_5dp"
                    android:text="@string/menu_TagComposeMessage"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/textViewWalkCompose"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_5dp"
                    android:text="@string/help_Send"
                    android:textSize="@dimen/text_size_medium" />

                <ImageView
                    android:id="@+id/imageViewCompose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/size_25dp"
                    android:layout_marginLeft="@dimen/size_20dp"
                    android:layout_marginRight="@dimen/size_25dp"
                    android:adjustViewBounds="true"
                    android:background="#000000"
                    android:contentDescription="@string/menu_TagComposeMessage"
                    android:padding="@dimen/size_1dp"
                    android:src="@drawable/scn_compose_android" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutMessages"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textViewStepMessages"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_5dp"
                    android:text="@string/menu_TagListMessages"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/textViewWalkMessages"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_5dp"
                    android:text="@string/help_Messages"
                    android:textSize="@dimen/text_size_medium" />

                <ImageView
                    android:id="@+id/imageViewMessages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/size_25dp"
                    android:layout_marginLeft="@dimen/size_20dp"
                    android:layout_marginRight="@dimen/size_25dp"
                    android:adjustViewBounds="true"
                    android:background="#000000"
                    android:contentDescription="@string/menu_TagListMessages"
                    android:padding="@dimen/size_1dp"
                    android:src="@drawable/scn_messages_android" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutIntroduction"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textViewIntroduction"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_5dp"
                    android:text="@string/title_SecureIntroduction"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/textViewWalkIntroduction"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/size_5dp"
                    android:text="@string/help_SecureIntroduction"
                    android:textSize="@dimen/text_size_medium" />

                <ImageView
                    android:id="@+id/imageViewIntroduction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/size_25dp"
                    android:layout_marginLeft="@dimen/size_20dp"
                    android:layout_marginRight="@dimen/size_25dp"
                    android:adjustViewBounds="true"
                    android:background="#000000"
                    android:contentDescription="@string/title_SecureIntroduction"
                    android:padding="@dimen/size_1dp"
                    android:src="@drawable/scn_secureintro_android" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>